# dotfiles

./: .gitignore  .gvimrc.after  .luarc.json  .proton  .spacemacs  .stylua.toml  .wezterm.lua  .zshrc  Brewfile  alacritty.toml  alacritty.yml  antidote.zsh  boostrap.sh  bootstrap  bootstrap.sh  certbot-aws  certbot-cf  cfg  excid3.zsh-theme  gitconfig  gitignore  gitignore_global  gvimrc.after  iterm.profile  justfile  linux.sh  macos.sh  makesymlinks.sh  praveen.bttpreset  praveen.itermcolors  prompt_praveen_setup  proxmox  ra-multiplex.plist  setup.sh  spacemacs  tmux.conf  vimrc  wezterm.lua  zpreztorc  zprofile  (+6 more)
agents/: AGENTS.md  (+1 more)
cmd/: .gitignore  Cargo.toml  askama.toml  release  release-minimal  test.txt.enc  test_custom_syntax.rs
cmd/.claude/: settings.local.json
cmd/scripts/: antidote.zsh
cmd/src/: bootstrap.rs  cmd.rs  codex_voice.rs  crates_io.rs  encrypt.rs  fsutil.rs  gcloud.rs  github.rs  jj_lib_helpers.rs  main.rs  os.rs  pr_context.rs  runtime.rs  secrets.rs  terraform.rs  util.rs
cmd/src/cmd/: agent_target.rs  better_context.rs  bootstrap.rs  cache.rs  cloudflare.rs  codex.rs  crate_versions.rs  file.rs  flags.rs  gcloud.rs  generate.rs  install.rs  jj.rs  jj_tui.rs  main_cmd.rs  mcp.rs  memory.rs  pack.rs  search.rs  secrets.rs  skill.rs  sync.rs  terraform.rs  tmux.rs  vault.rs
cmd/src/cmd/bootstrap/: codex_plugins.rs  flags.rs  install.rs  link.rs  release.rs
cmd/src/cmd/codex/: app_server.rs  auth.rs  config_overlay.rs  fs.rs  ops.rs  table.rs  usage.rs
cmd/src/cmd/gcloud/: flags.rs
cmd/src/cmd/generate/: flags.rs  rmp.rs
cmd/src/cmd/jj_tui/: PLAN.md  app.rs  keybindings.rs  tree.rs  ui.rs
cmd/src/cmd/search/: config.rs  library.rs  openalex.rs  s2.rs
cmd/src/cmd/terraform/: flags.rs
cmd/src/cmd/vault/: flags.rs
cmd/src/codex_voice/: cli.rs  clipboard.rs  codex.rs  config.rs  history.rs  realtime.rs  tmux.rs
cmd/src/codex_voice/codex/: app_server.rs  latest_message.rs  thread_resolver.rs  types.rs
cmd/src/codex_voice/realtime/: audio.rs  events.rs  prompt.rs  session.rs  websocket.rs
cmd/templates/: osx_defaults.zsh.j2  osx_defaults.zsh.stpl  test.j2  zshrc.j2  zshrc.stpl
cmd/templates/rust-multiplatform/: manager.rs.j2  manager.swift.j2  view_model.rs.j2  view_model.swift.j2
cmd/templates/xcframework/: build.sh.j2  github_action.yaml.custom  github_action.yaml.stpl  info.plist.j2  inner_info.plist.j2  module.modulemap.j2  package.swift.j2  umbrella.h.j2
(+908 files in other folders)
