[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
color-eyre = "0.6.2"
eyre = "0.6.8" 

# cli
xflags = "0.3.1"
xshell = "0.2.5"

# terminal colors
colored = "2.0.4"

# templating 
sailfish = "0.8.0"
include_dir = "0.7.3"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8.5"

# encryption
age = "0.10"
sha2 = "0.10.0"
hex = "0.4.3"

# file
tempfile = "3.10.0"
