[package]
name = "cmd"
version = "0.0.20"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
color-eyre = "0.6.2"
eyre = "0.6.8"

# cli
xflags = "0.4.0-pre.2"
xshell = "0.2.5"

# terminal colors
colored = "3.0"

# templating 
askama = "0.14.0"
include_dir = "0.7.3"

# serializationa
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9"

# utils
rand = "0.9"
convert_case = "0.8.0"

# encryption
age = "0.11"
sha2 = "0.10.0"
hex = "0.4.3"

# file
tempfile = "3.10.0"

# logging
env_logger = "0.11.0"
log = "0.4"

# string distance
textdistance = "1.1"

# json
serde_json = "1.0"
